[package]
name = "sei-zk-file-transfer"
version = "0.1.0"
authors = ["baturalp@zk-lokomotive.xyz"]
edition = "2021"
description = "A ZK file transfer smart contract for SEI blockchain"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.8", default-features = false }
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.2.0"
schemars = "0.8.16"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
thiserror = "1.0.64"
sha2 = "0.10.8"

# ZK proof related dependencies
bellman = { version = "0.13.1", default-features = false }
bls12_381 = { version = "0.7.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
cosmwasm-schema = "1.5.8"
cw-multi-test = "0.16.5"

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""
